<resources>
    <string name="app_name">Adv160818008TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptytodo">Your todo is empty. Create new todo to start.</string>
    <string name="newtodo">New ToDo</string>
    <string name="addtodo">Add ToDo</string>
    <string name="priority">Priority</string>
    <string name="highpriority">High Priority</string>
    <string name="medpriority">Medium Priority</string>
    <string name="lowpriority">Low Priority</string>
</resources>